# Palworld-Trainer

./: .gitignore  PalworldTrainer.spec  README.md  pyproject.toml  run_trainer.py
.github/workflows/: build.yml  release.yml
docs/: build-workflow.yml.example  chenstack-feature-mapping.md  feature-gap-analysis.md  reference-parity-checklist.md
integrations/ue4ss/PalworldTrainerBridge/: README.md
integrations/ue4ss/PalworldTrainerBridge/Scripts/: main.lua
scripts/: build.ps1  generate_icon.py  live_smoketest.py  package_release.ps1  smoke_test_exe.ps1
src/palworld_trainer/: __init__.py  __main__.py  app.py  catalog.py  cheats.py  commands.py  config.py  coord_presets.py  coord_workspace.py  environment.py  game_control.py  host_tools.py  map_tools.py  mem_engine.py  memory.py  models.py  reference_parity.py  runtime.py  teleport_points.py  ue4ss.py
src/palworld_trainer/data/coords/: Palworld.Coords.json
src/palworld_trainer/data/enums/: itemdata.lua  npcdata.lua  paldata.lua  technologydata.lua
tests/: __init__.py  test_app_cli.py  test_app_layout.py  test_bridge_script.py  test_catalog.py  test_cheats.py  test_commands.py  test_config.py  test_coord_presets.py  test_coord_workspace.py  test_environment.py  test_game_control.py  test_host_tools.py  test_map_tools.py  test_mem_engine.py  test_memory.py  test_packaging.py  test_reference_parity.py  test_runtime.py  test_teleport_points.py  test_ue4ss.py  test_version.py
