[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "palworld-trainer"
version = "1.5.1"
description = "傻瓜版 Palworld 修改器 — 聊天命令 + 直连内存冻结 + 自定义字段扫描 + 自由命令。"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Boowenn" }
]
dependencies = []

[project.optional-dependencies]
build = ["pyinstaller>=6.10"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
