[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "palworld-trainer"
version = "1.7.0"
description = "桌面版风格的傻瓜 Palworld 修改器：常用功能、角色增强、物品/帕鲁常用收藏与坐标直传。"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Boowenn" }
]
dependencies = []

[project.optional-dependencies]
build = ["pyinstaller>=6.10"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
